--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "yiisoft/yii2-swiftmailer": "*",
     "yiidoc/yii2-redactor": "*",
     "yiisoft/yii2-redis": "~2.0.0",
+    "yiisoft/yii2-jui": "~2.0.0",
     "components/jqueryui": "^1.11",
     "mobiledetect/mobiledetectlib": "^2.8"
   },
