--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "yiisoft/yii2-redis": "~2.0.0",
     "yiisoft/yii2-jui": "~2.0.0",
     "components/jqueryui": "^1.11",
-    "mobiledetect/mobiledetectlib": "^2.8"
+    "mobiledetect/mobiledetectlib": "^2.8",
+    "fxp/composer-asset-plugin": "~1.0"
   },
   "require-dev": {
     "yiisoft/yii2-codeception": "*",
