--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "yiisoft/yii2-jui": "~2.0.0",
     "components/jqueryui": "^1.11",
     "mobiledetect/mobiledetectlib": "^2.8",
-    "fxp/composer-asset-plugin": "~1.0"
+    "fxp/composer-asset-plugin": "~1.0",
+    "codemix/yii2-excelexport": "*"
   },
   "require-dev": {
     "yiisoft/yii2-codeception": "*",
