--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "components/jqueryui": "^1.11",
     "mobiledetect/mobiledetectlib": "^2.8",
     "fxp/composer-asset-plugin": "~1.0",
-    "codemix/yii2-excelexport": "*"
+    "codemix/yii2-excelexport": "*",
+    "yiisoft/yii2-httpclient": "~2.0.0"
   },
   "require-dev": {
     "yiisoft/yii2-codeception": "*",
